--- a/dev/index.html
+++ b/dev/index.html
@@ -4,7 +4,18 @@
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+		<link rel="stylesheet" href="./css/main.css"/>
 		<title>Tur Agency</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="wrapper">
+			<div id="drop-area">
+				<form class="my-form">
+					<p>Upload multiple files with the file dialog or by dragging and dropping images onto the dashed region</p>
+					<input type="file" id="fileElem" multiple="multiple"/>
+				</form>
+			</div>
+		</div>
+		<script src="./js/main.js"></script>
+	</body>
 </html>
